openshift/backup-devel/deployment-bottegaio-static-web.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: 'git@github.com:rossonet/bottegaio.git'
    deployment.kubernetes.io/revision: '24'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"bottegaio-static-web:latest","namespace":"agenti-bottegaio-net-dev"},"fieldPath":"spec.template.spec.containers[?(@.name==\"bottegaio-static-web\")].image","pause":"false"}]
    openshift.io/generated-by: OpenShiftWebConsole
  selfLink: >-
    /apis/apps/v1/namespaces/agenti-bottegaio-net-dev/deployments/bottegaio-static-web
  resourceVersion: '1653260'
  name: bottegaio-static-web
  uid: 5816bec8-9102-427b-8ee6-983d019d9170
  creationTimestamp: '2022-01-31T16:17:20Z'
  generation: 24
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: apps/v1
      time: '2022-01-31T16:17:20Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:alpha.image.policy.openshift.io/resolve-names': {}
            'f:app.openshift.io/vcs-ref': {}
            'f:app.openshift.io/vcs-uri': {}
            'f:image.openshift.io/triggers': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime': {}
            'f:app.openshift.io/runtime-version': {}
        'f:spec':
          'f:progressDeadlineSeconds': {}
          'f:replicas': {}
          'f:revisionHistoryLimit': {}
          'f:selector': {}
          'f:strategy':
            'f:rollingUpdate':
              .: {}
              'f:maxSurge': {}
              'f:maxUnavailable': {}
            'f:type': {}
          'f:template':
            'f:metadata':
              'f:labels':
                .: {}
                'f:app': {}
                'f:deploymentconfig': {}
            'f:spec':
              'f:containers':
                'k:{"name":"bottegaio-static-web"}':
                  .: {}
                  'f:imagePullPolicy': {}
                  'f:name': {}
                  'f:ports':
                    .: {}
                    'k:{"containerPort":8080,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                    'k:{"containerPort":8443,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                  'f:resources': {}
                  'f:terminationMessagePath': {}
                  'f:terminationMessagePolicy': {}
              'f:dnsPolicy': {}
              'f:restartPolicy': {}
              'f:schedulerName': {}
              'f:securityContext': {}
              'f:terminationGracePeriodSeconds': {}
    - manager: openshift-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2022-01-31T16:18:13Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:template':
            'f:spec':
              'f:containers':
                'k:{"name":"bottegaio-static-web"}':
                  'f:image': {}
    - manager: kube-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2022-01-31T20:21:56Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            'f:deployment.kubernetes.io/revision': {}
        'f:status':
          'f:availableReplicas': {}
          'f:conditions':
            .: {}
            'k:{"type":"Available"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
            'k:{"type":"Progressing"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
          'f:observedGeneration': {}
          'f:readyReplicas': {}
          'f:replicas': {}
          'f:updatedReplicas': {}
  namespace: agenti-bottegaio-net-dev
  labels:
    app: bottegaio-static-web
    app.kubernetes.io/component: bottegaio-static-web
    app.kubernetes.io/instance: bottegaio-static-web
    app.kubernetes.io/name: httpd
    app.kubernetes.io/part-of: bottegaio
    app.openshift.io/runtime: httpd
    app.openshift.io/runtime-version: 2.4-el7
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bottegaio-static-web
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bottegaio-static-web
        deploymentconfig: bottegaio-static-web
    spec:
      containers:
        - name: bottegaio-static-web
          image: >-
            image-registry.openshift-image-registry.svc:5000/agenti-bottegaio-net-dev/bottegaio-static-web@sha256:5988862c9e124da17d21e649b7a0a0e67c16de785da5c456e9e63275e19e6f89
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
  observedGeneration: 24
  replicas: 1
  updatedReplicas: 1
  readyReplicas: 1
  availableReplicas: 1
  conditions:
    - type: Available
      status: 'True'
      lastUpdateTime: '2022-01-31T17:24:55Z'
      lastTransitionTime: '2022-01-31T17:24:55Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2022-01-31T20:21:59Z'
      lastTransitionTime: '2022-01-31T17:06:03Z'
      reason: NewReplicaSetAvailable
      message: >-
        ReplicaSet "bottegaio-static-web-8459468744" has successfully
        progressed.
