openshift/backup-devel/service-bottegaio-static-web.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: 'git@github.com:rossonet/bottegaio.git'
    openshift.io/generated-by: OpenShiftWebConsole
  selfLink: /api/v1/namespaces/agenti-bottegaio-net-dev/services/bottegaio-static-web
  resourceVersion: '1577830'
  name: bottegaio-static-web
  uid: 25fbfe72-90cf-4dc7-ade3-dd0f917d155b
  creationTimestamp: '2022-01-31T16:17:20Z'
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: v1
      time: '2022-01-31T16:17:20Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:app.openshift.io/vcs-ref': {}
            'f:app.openshift.io/vcs-uri': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime': {}
            'f:app.openshift.io/runtime-version': {}
        'f:spec':
          'f:ports':
            .: {}
            'k:{"port":8080,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
            'k:{"port":8443,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
          'f:selector':
            .: {}
            'f:app': {}
            'f:deploymentconfig': {}
          'f:sessionAffinity': {}
          'f:type': {}
  namespace: agenti-bottegaio-net-dev
  labels:
    app: bottegaio-static-web
    app.kubernetes.io/component: bottegaio-static-web
    app.kubernetes.io/instance: bottegaio-static-web
    app.kubernetes.io/name: httpd
    app.kubernetes.io/part-of: bottegaio
    app.openshift.io/runtime: httpd
    app.openshift.io/runtime-version: 2.4-el7
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    app: bottegaio-static-web
    deploymentconfig: bottegaio-static-web
  clusterIP: 172.30.23.65
  clusterIPs:
    - 172.30.23.65
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
