openshift/backup-devel/route-bottegaio-backend.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: bottegaio-backend
  namespace: agenti-bottegaio-net-dev
  uid: 3c4bfd06-aae1-45f9-b34d-45917c5e0c2a
  resourceVersion: '1576694'
  creationTimestamp: '2022-01-31T12:02:42Z'
  labels:
    app: bottegaio-backend
    app.kubernetes.io/component: bottegaio-backend
    app.kubernetes.io/instance: bottegaio-backend
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: bottegaio
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-8-ubi8
  annotations:
    openshift.io/host.generated: 'true'
  managedFields:
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2022-01-31T12:02:43Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
    - manager: Mozilla
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2022-01-31T16:13:32Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime': {}
            'f:app.openshift.io/runtime-version': {}
        'f:spec':
          'f:host': {}
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:tls':
            .: {}
            'f:insecureEdgeTerminationPolicy': {}
            'f:termination': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
spec:
  host: api-dev.apps.bottegaio.net
  to:
    kind: Service
    name: bottegaio-backend
    weight: 100
  port:
    targetPort: 8443-tcp
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
status:
  ingress:
    - host: api-dev.apps.bottegaio.net
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2022-01-31T16:13:32Z'
      wildcardPolicy: None
      routerCanonicalHostname: apps.bottegaio.net
